--- a/example/runwrap/src/style.scss
+++ b/example/runwrap/src/style.scss
@@ -10,6 +10,7 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.5s, color 0.5s;
+    overflow: hidden;
 }
 
 #app,
@@ -18,4 +19,5 @@ body {
     height: 100%;
     background-color: var(--bg-color);
     transition: background-color 0.5s, color 0.5s;
+    overflow: hidden;
 }
