--- a/example/runwrap/src/style.scss
+++ b/example/runwrap/src/style.scss
@@ -21,3 +21,7 @@ body {
     transition: background-color 0.5s, color 0.5s;
     overflow: hidden;
 }
+
+.buildDialog {
+    background-color: rgba(255, 255, 255, 0.8) !important;
+}
